<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vardan.smsconfirm.ConfirmActivity">

    <TextView
        android:id="@+id/receivedMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/messageFromBroadcast"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/confActReceivedMessage" />


    <TextView
        android:id="@+id/messageFromBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType=""
        android:text="@string/confActMessageFromeBroadcast"
        android:textAlignment="center" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageFromBroadcast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:paddingHorizontal="120dp"
        android:text="@string/confActConfirmCode" />
</RelativeLayout>
